assets/style.scss
/* ... */
.text-wrapper {

    h2 {
        font-size: 3rem;
        margin-bottom: 4rem;
        width: fit-content;
        position: relative;
    }

    span:first-of-type {
        color: lightgrey;
    }
}

.text-wrapper h2::before {
    content: '';
    position: absolute;
    right: 0;
    width: 100%;
    height: 100%;
    background: var(--accent-1);
    animation: opacity 1s 1s forwards;

}

@keyframes opacity {
    to {
        width: 0;
    }
}

.text-wrapper p {
    padding: 1rem 0 1rem 3rem;
    position: relative;
}


.text-wrapper p::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    width: 2px;
    height: 0;
    background: var(--accent-1);
    animation: height 1s linear forwards;
}

@keyframes height {
    from {
        height: 0;
    }

    to {
        height: 100%;
    }
}

/* side social icons */

.social-wrapper {
    position: fixed;
    top: 50%;
    right: -100;
    transform: translateY(-50%);

    &.on {
        right: 0;
        transition: var(--transition-1);
    }

    a {
        display: block;

    }
}


// taxonomy-serie-color.php

.tax-top {
    width: 100%;
    height: 400px;
    background: url(../img/tax-color.jpeg) 100% 80%;
    background-size: cover;

    p,
    h1 {
        position: relative;
        left: 10%;
        top: 15%;
    }
}

.tax-container {

    .top-wrapper {
        cursor: pointer;
        position: relative;

        .img-wrapper {
            overflow: hidden;
            width: 100%;

            &:hover {

                img {
                    transform: scale(1.1);
                    transition: var(--transition-1);
                }
            }
        }

        .text-wrapper {
            width: 100%;
            position: absolute;
            bottom: 0;
            z-index: 1;
            background: rgba(255, 255, 255, .6);

            h3 {
                font-size: 2rem;
                border-bottom: var(--border-gray);
                width: 100%;
            }

        }
    }
}

// blog post page: home.php

.home-container {


    .blog-item {

        border-bottom: var(--border-black);

        img {
            max-width: 500px;
            max-height: 600px;
            width: 100%;
            height: auto;
        }

        .content:nth-of-type(even) {
            grid-column: 1;
        }
    }
}

// aside for sidebar.php

aside {
    h3 {
        border-bottom: var(--border-black);
    }
}



/* front page popular section */

.series-container {
    display: flex;

    .series-slide {
        width: 100%;
        margin-right: -100%;

        h1 {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
            color: #fff;
            font-size: 1.5rem;
            animation: scale .8s ease-in forwards;

            @keyframes scale {
                from {
                    transform: translate(-50%, -50%) scale(1);
                }

                to {
                    transform: translate(-50%, -50%) scale(1.2);
                }
            }
        }

        &::before {
            content: '';
            position: absolute;
            width: 100%;
            height: 100%;
            z-index: 1;
            background: rgba(0, 0, 0, .3);
        }


        &.slide {
            display: flex;
            left: 100%;
            animation: slide .6s ease-out;

            @keyframes slide {
                from {
                    opacity: 0.4;
                }

                to {
                    opacity: 1;
                }
            }
        }
    }
}

.popular-wrapper.grid-4 {
    place-items: start start;
}

.popular-article {
    cursor: pointer;
    position: relative;

    h3 {
        word-break: break-all;
    }

}

.popular-article:hover {
    box-shadow: rgba(0, 0, 0, 0.24) 0px 5px 12px;
    transition: .3s ease-in-out;
}


.popular-article::after {
    position: absolute;
    content: '続きを読む';
    display: grid;
    top: 0;
    left: 0;
    place-items: center;
    width: 100%;
    height: 100%;
    transform: scale(0);
    background: rgba(255, 255, 255, .6);
}

.popular-article:hover::after {
    transform: scale(1);
    transition: var(--transition-1);
}

// search.php: search result page
// share the same template with archive.php for archive categories, tags, and and dates.

.result-container {


    .result-wrapper {
        width: 300px;

        img {
            width: inherit;
            height: 400px;
        }

        small a {
            color: darkgray;
        }

    }

}

// index.php for single post page
.index-container {
    &.grid {
        place-items: start center;
    }
}

// taxonomy-serie-retro.php
.retro-container {
    &.grid {
        grid-gap: 0;
    }

    a {
        padding: 0;
    }


    .retro-wrapper {
        border: var(--border-black);
        position: relative;

        &:hover::after {
            position: absolute;
            content: '記事を読む';
            width: 100%;
            height: 100%;
            display: grid;
            place-items: center;
            background: rgba(255, 255, 255, .6);
            animation: height .4s linear;

            @keyframes height {
                from {
                    height: 0%;
                }

                to {
                    height: 100%;
                }
            }
        }

        &.grid {
            grid-gap: 0;
            grid-template-columns: auto;
            place-items: start center;
        }

        .retro-text {
            padding: 1vh 2vw;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: space-between;
        }
    }
}
/* ... */

